# cadverter

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: publish.yml
samples/: test_block_with_holes.step
src/cadvert/: __init__.py  api.py  cli.py  document.py  dxf.py  features.py  geometry.py  ingest.py  mesh.py  renderer.py  server.py  spatial.py  topology.py  utils.py  validate.py
src/cadvert/static/: about.html  developers.html  index.html
tests/: test_dxf.py  test_pipeline.py
