[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadvert"
version = "0.1.0"
description = "Convert CAD files into LLM-readable Hierarchical Spatial Documents"
requires-python = ">=3.10"
dependencies = [
    "cadquery-ocp",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
mesh = [
    "trimesh",   # OBJ file support
]

[project.scripts]
cadvert        = "cadvert.cli:main"
cadvert-server = "cadvert.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/cadvert"]
